[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blindspot"
version = "0.1.0"
description = "Измеряет, делят ли валидаторы слепые зоны (корреляция промахов по классу дефекта)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.21"]

[project.scripts]
blindspot = "blindspot.cli:main"

[project.optional-dependencies]
# линтеры для probe-python ставятся пользователем по необходимости
python-probe = ["pylint", "ruff", "flake8"]

[tool.setuptools]
packages = ["blindspot"]
py-modules = ["article_listing"]
