[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blindspot"
version = "0.1.0"
description = "Measures whether validators share blind spots (miss-correlation per defect class)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.21"]

[project.scripts]
blindspot = "blindspot.cli:main"

[project.optional-dependencies]
# linters for probe-python are installed by the user as needed
python-probe = ["pylint", "ruff", "flake8"]

[tool.setuptools]
packages = ["blindspot"]
py-modules = ["article_listing"]
